package com.asakii.server.mcp

import com.asakii.claude.agent.sdk.mcp.McpServerBase
import com.asakii.claude.agent.sdk.mcp.ToolResult
import com.asakii.claude.agent.sdk.mcp.annotations.McpServerConfig
import com.asakii.rpc.proto.AskUserQuestionRequest
import com.asakii.rpc.proto.QuestionItem as ProtoQuestionItem
import com.asakii.rpc.proto.QuestionOption as ProtoQuestionOption
import com.asakii.server.rpc.ClientCaller
import kotlinx.serialization.Serializable
import kotlinx.serialization.encodeToString
import kotlinx.serialization.json.*
import mu.KotlinLogging

/**
 * ç”¨æˆ·å›ç­”é¡¹ï¼ˆå‰ç«¯è¿”å›çš„æ•°ç»„å…ƒç´ ï¼‰
 */
@Serializable
data class UserAnswerItem(
    val question: String,
    val header: String,
    val answer: String
)

/**
 * æƒé™è¡Œä¸ºç±»å‹
 */
@Serializable
enum class PermissionBehavior {
    @kotlinx.serialization.SerialName("allow")
    ALLOW,
    @kotlinx.serialization.SerialName("deny")
    DENY,
    @kotlinx.serialization.SerialName("ask")
    ASK
}

/**
 * æƒé™æ¨¡å¼
 */
@Serializable
enum class PermissionMode {
    @kotlinx.serialization.SerialName("default")
    DEFAULT,
    @kotlinx.serialization.SerialName("acceptEdits")
    ACCEPT_EDITS,
    @kotlinx.serialization.SerialName("plan")
    PLAN,
    @kotlinx.serialization.SerialName("bypassPermissions")
    BYPASS_PERMISSIONS,
    @kotlinx.serialization.SerialName("dontAsk")
    DONT_ASK
}

/**
 * æƒé™æ›´æ–°ç›®æ ‡
 */
@Serializable
enum class PermissionUpdateDestination {
    @kotlinx.serialization.SerialName("userSettings")
    USER_SETTINGS,
    @kotlinx.serialization.SerialName("projectSettings")
    PROJECT_SETTINGS,
    @kotlinx.serialization.SerialName("localSettings")
    LOCAL_SETTINGS,
    @kotlinx.serialization.SerialName("session")
    SESSION
}

/**
 * æƒé™æ›´æ–°ç±»å‹
 */
@Serializable
enum class PermissionUpdateType {
    @kotlinx.serialization.SerialName("addRules")
    ADD_RULES,
    @kotlinx.serialization.SerialName("replaceRules")
    REPLACE_RULES,
    @kotlinx.serialization.SerialName("removeRules")
    REMOVE_RULES,
    @kotlinx.serialization.SerialName("setMode")
    SET_MODE,
    @kotlinx.serialization.SerialName("addDirectories")
    ADD_DIRECTORIES,
    @kotlinx.serialization.SerialName("removeDirectories")
    REMOVE_DIRECTORIES
}

/**
 * æƒé™è§„åˆ™å€¼
 */
@Serializable
data class PermissionRuleValue(
    val toolName: String,
    val ruleContent: String? = null
)

/**
 * æƒé™æ›´æ–°é…ç½®
 */
@Serializable
data class PermissionUpdate(
    val type: PermissionUpdateType,
    val rules: List<PermissionRuleValue>? = null,
    val behavior: PermissionBehavior? = null,
    val mode: PermissionMode? = null,
    val directories: List<String>? = null,
    val destination: PermissionUpdateDestination? = null
)

/**
 * æˆæƒå“åº”æ•°æ®ç±»ï¼ˆå‰ç«¯ RequestPermission å›è°ƒçš„è¿”å›æ ¼å¼ï¼Œä¸å®˜æ–¹ SDK ä¿æŒä¸€è‡´ï¼‰
 */
@Serializable
data class PermissionResponse(
    val approved: Boolean,
    val permissionUpdates: List<PermissionUpdate>? = null,  // æ”¹ä¸ºæ•°ç»„ï¼Œä¸å®˜æ–¹ SDK ä¿æŒä¸€è‡´
    val denyReason: String? = null
)

/**
 * AskUserQuestion è¯·æ±‚å‚æ•°
 */
@Serializable
data class AskUserQuestionParams(
    val questions: List<QuestionItem>
)

/**
 * é—®é¢˜é¡¹ï¼ˆå…¼å®¹ Claude æ ¼å¼ï¼‰
 */
@Serializable
data class QuestionItem(
    val question: String,
    val header: String? = null,  // Claude å¯èƒ½ä¸ä¼ 
    val options: List<OptionItem>? = null,  // å¯èƒ½æ˜¯å¯¹è±¡æ•°ç»„
    val multiSelect: Boolean = false
)

/**
 * é€‰é¡¹é¡¹
 */
@Serializable
data class OptionItem(
    val label: String,
    val description: String = ""
)

/**
 * Claude åŸç”Ÿæ ¼å¼çš„é—®é¢˜é¡¹
 */
@Serializable
data class ClaudeQuestionItem(
    val question: String,
    val header: String? = null,
    val options: List<ClaudeOptionItem>? = null,
    val multiSelect: Boolean = false
)

/**
 * Claude åŸç”Ÿæ ¼å¼çš„é€‰é¡¹ï¼ˆå¯èƒ½æ˜¯å­—ç¬¦ä¸²æˆ–å¯¹è±¡ï¼‰
 */
@Serializable
data class ClaudeOptionItem(
    val label: String,
    val description: String = ""
)

/**
 * ç”¨æˆ·äº¤äº’ MCP Server
 *
 * æä¾›éœ€è¦ç”¨æˆ·äº¤äº’çš„å·¥å…·ï¼Œå¦‚ AskUserQuestionã€‚
 * é€šè¿‡ ClientCaller ä¸å‰ç«¯é€šä¿¡ï¼Œè·å–ç”¨æˆ·è¾“å…¥ã€‚
 */
private val mcpLogger = KotlinLogging.logger {}

@McpServerConfig(
    name = "user_interaction",
    version = "1.0.0",
    description = "ç”¨æˆ·äº¤äº’å·¥å…·æœåŠ¡å™¨ï¼Œæä¾›å‘ç”¨æˆ·æé—®ç­‰åŠŸèƒ½"
)
class UserInteractionMcpServer : McpServerBase() {
    private var clientCaller: ClientCaller? = null

    /**
     * æä¾›è¯¥ MCP æœåŠ¡å™¨çš„ç³»ç»Ÿæç¤ºè¯è¿½åŠ å†…å®¹
     *
     * å‘ŠçŸ¥ AI å¦‚ä½•æ­£ç¡®ä½¿ç”¨ AskUserQuestion å·¥å…·ä¸ç”¨æˆ·è¿›è¡Œäº¤äº’
     */
    override fun getSystemPromptAppendix(): String = """
        When you need clarification from the user, especially when presenting multiple options or choices, use the `mcp__user_interaction__AskUserQuestion` tool to ask questions. The user's response will be returned to you through this tool.
    """.trimIndent()

    companion object {
        /** AskUserQuestion å·¥å…·çš„ JSON Schema å®šä¹‰ */
        val ASK_USER_QUESTION_SCHEMA: Map<String, Any> = mapOf(
            "type" to "object",
            "properties" to mapOf(
                "questions" to mapOf(
                    "type" to "array",
                    "description" to "é—®é¢˜åˆ—è¡¨",
                    "items" to mapOf(
                        "type" to "object",
                        "properties" to mapOf(
                            "question" to mapOf(
                                "type" to "string",
                                "description" to "é—®é¢˜å†…å®¹"
                            ),
                            "header" to mapOf(
                                "type" to "string",
                                "description" to "é—®é¢˜æ ‡é¢˜/åˆ†ç±»æ ‡ç­¾"
                            ),
                            "options" to mapOf(
                                "type" to "array",
                                "description" to "é€‰é¡¹åˆ—è¡¨",
                                "items" to mapOf(
                                    "type" to "object",
                                    "properties" to mapOf(
                                        "label" to mapOf(
                                            "type" to "string",
                                            "description" to "é€‰é¡¹æ˜¾ç¤ºæ–‡æœ¬"
                                        ),
                                        "description" to mapOf(
                                            "type" to "string",
                                            "description" to "é€‰é¡¹æè¿°ï¼ˆå¯é€‰ï¼‰"
                                        )
                                    ),
                                    "required" to listOf("label")
                                )
                            ),
                            "multiSelect" to mapOf(
                                "type" to "boolean",
                                "description" to "æ˜¯å¦å…è®¸å¤šé€‰ï¼Œé»˜è®¤ false"
                            )
                        ),
                        "required" to listOf("question", "header", "options")
                    )
                )
            ),
            "required" to listOf("questions")
        )

    }

    /**
     * è®¾ç½®å®¢æˆ·ç«¯è°ƒç”¨å™¨
     */
    fun setClientCaller(caller: ClientCaller) {
        this.clientCaller = caller
        mcpLogger.info { "âœ… [UserInteractionMcpServer] ClientCaller å·²è®¾ç½®" }
    }

    /**
     * é‡å†™ callToolJsonï¼Œç›´æ¥ä» JsonObject ååºåˆ—åŒ–ä¸ºå¼ºç±»å‹
     */
    override suspend fun callToolJson(toolName: String, arguments: JsonObject): ToolResult {
        return when (toolName) {
            "AskUserQuestion" -> handleAskUserQuestionJson(arguments)
            else -> super.callToolJson(toolName, arguments)
        }
    }

    /**
     * å¤„ç† AskUserQuestionï¼ˆç›´æ¥ä» JsonObject ååºåˆ—åŒ–ï¼‰
     *
     * ä½¿ç”¨ Protobuf åºåˆ—åŒ–ä¸å‰ç«¯é€šä¿¡
     */
    private suspend fun handleAskUserQuestionJson(arguments: JsonObject): ToolResult {
        val caller = clientCaller
            ?: return ToolResult.error("ClientCaller æœªè®¾ç½®ï¼Œæ— æ³•ä¸å‰ç«¯é€šä¿¡")

        mcpLogger.info { "ğŸ“© [AskUserQuestion] æ”¶åˆ°å·¥å…·è°ƒç”¨ï¼Œå‚æ•°: $arguments" }

        return try {
            // ç›´æ¥ä» JsonObject ååºåˆ—åŒ–ä¸ºå¼ºç±»å‹
            val normalized = normalizeQuestions(arguments)
            val params: AskUserQuestionParams = Json.decodeFromJsonElement(normalized)

            mcpLogger.info { "ğŸ“¤ [AskUserQuestion] è§£æåçš„å‚æ•°: ${params.questions.size} ä¸ªé—®é¢˜" }

            // æ„å»º Protobuf è¯·æ±‚
            val protoRequest = AskUserQuestionRequest.newBuilder().apply {
                params.questions.forEach { q ->
                    addQuestions(ProtoQuestionItem.newBuilder().apply {
                        question = q.question
                        q.header?.let { header = it }
                        q.options?.forEach { opt ->
                            addOptions(ProtoQuestionOption.newBuilder().apply {
                                label = opt.label
                                if (opt.description.isNotEmpty()) {
                                    description = opt.description
                                }
                            }.build())
                        }
                        multiSelect = q.multiSelect
                    }.build())
                }
            }.build()

            // ä½¿ç”¨ Protobuf ç±»å‹åŒ–è°ƒç”¨
            val protoResponse = caller.callAskUserQuestion(protoRequest)

            mcpLogger.info { "ğŸ“¥ [AskUserQuestion] æ”¶åˆ°å‰ç«¯å“åº”: ${protoResponse.answersCount} ä¸ªå›ç­”" }

            // è½¬æ¢ä¸º Map<é—®é¢˜, å›ç­”>
            val answersMap: Map<String, String> = protoResponse.answersList.associate {
                it.question to it.answer
            }
            val content = Json.encodeToString(answersMap)

            mcpLogger.info { "âœ… [AskUserQuestion] å®Œæˆï¼Œè¿”å›: $content" }
            ToolResult.success(content)

        } catch (e: Exception) {
            mcpLogger.error { "âŒ [AskUserQuestion] å¤„ç†å¤±è´¥: ${e.message}" }
            e.printStackTrace()
            ToolResult.error("å¤„ç†ç”¨æˆ·é—®é¢˜å¤±è´¥: ${e.message}")
        }
    }


    /**
     * å¯¹å­—ç¬¦ä¸²åŒ–çš„ questions è¿›è¡Œä¿®æ­£ï¼Œç¡®ä¿ä¸º JsonArray
     */
    private fun normalizeQuestions(arguments: JsonObject): JsonObject {
        val rawQuestions = arguments["questions"]
        if (rawQuestions is JsonPrimitive && rawQuestions.isString) {
            val content = rawQuestions.content
            if (content.startsWith("[") || content.startsWith("{")) {
                try {
                    val parsed = Json.parseToJsonElement(content)
                    if (parsed is JsonArray) {
                        return buildJsonObject {
                            arguments.forEach { (k, v) ->
                                if (k == "questions") put(k, parsed) else put(k, v)
                            }
                        }
                    }
                } catch (e: Exception) {
                    mcpLogger.warn { "âš ï¸ [AskUserQuestion] æ— æ³•ä»å­—ç¬¦ä¸²è§£æ questions: " }
                }
            }
        }
        return arguments
    }

    override suspend fun onInitialize() {
        // æ³¨å†Œ AskUserQuestion å·¥å…·
        registerToolWithSchema(
            name = "AskUserQuestion",
            description = "å‘ç”¨æˆ·è¯¢é—®é—®é¢˜å¹¶è·å–é€‰æ‹©ã€‚ä½¿ç”¨æ­¤å·¥å…·åœ¨éœ€è¦ç”¨æˆ·è¾“å…¥æˆ–ç¡®è®¤æ—¶ä¸ç”¨æˆ·äº¤äº’ã€‚",
            inputSchema = ASK_USER_QUESTION_SCHEMA
        ) { arguments ->
            handleAskUserQuestion(arguments)
        }

        mcpLogger.info { "âœ… [UserInteractionMcpServer] åˆå§‹åŒ–å®Œæˆï¼Œå·²æ³¨å†Œ AskUserQuestion å·¥å…·" }
    }

    /**
     * å¤„ç† AskUserQuestion å·¥å…·è°ƒç”¨
     *
     * ä½¿ç”¨ Protobuf åºåˆ—åŒ–ä¸å‰ç«¯é€šä¿¡
     */
    private suspend fun handleAskUserQuestion(arguments: Map<String, Any>): Any {
        val caller = clientCaller
            ?: return ToolResult.error("ClientCaller æœªè®¾ç½®ï¼Œæ— æ³•ä¸å‰ç«¯é€šä¿¡")

        mcpLogger.info { "ğŸ“© [AskUserQuestion] æ”¶åˆ°å·¥å…·è°ƒç”¨ï¼Œå‚æ•°: $arguments" }

        // è°ƒè¯•ï¼šæ‰“å°å‚æ•°ç±»å‹
        arguments.forEach { (key, value) ->
            mcpLogger.debug { "ğŸ“¦ å‚æ•° '$key' ç±»å‹: ${value?.let { it::class.qualifiedName } ?: "null"}, å€¼: $value" }
        }

        try {
            // å°† Map<String, Any> è½¬æ¢ä¸º JsonElementï¼Œå†è§£æä¸ºç±»å‹åŒ–å¯¹è±¡
            val paramsJson = anyToJsonElement(arguments)
            mcpLogger.debug { "ğŸ“¦ è½¬æ¢åçš„ JSON: $paramsJson" }
            val paramsJsonNormalized = normalizeQuestions(paramsJson.jsonObject)
            val params: AskUserQuestionParams = Json.decodeFromJsonElement(paramsJsonNormalized)

            mcpLogger.info { "ğŸ“¤ [AskUserQuestion] è§£æåçš„å‚æ•°: ${params.questions.size} ä¸ªé—®é¢˜" }

            // æ„å»º Protobuf è¯·æ±‚
            val protoRequest = AskUserQuestionRequest.newBuilder().apply {
                params.questions.forEach { q ->
                    addQuestions(ProtoQuestionItem.newBuilder().apply {
                        question = q.question
                        q.header?.let { header = it }
                        q.options?.forEach { opt ->
                            addOptions(ProtoQuestionOption.newBuilder().apply {
                                label = opt.label
                                if (opt.description.isNotEmpty()) {
                                    description = opt.description
                                }
                            }.build())
                        }
                        multiSelect = q.multiSelect
                    }.build())
                }
            }.build()

            // ä½¿ç”¨ Protobuf ç±»å‹åŒ–è°ƒç”¨
            val protoResponse = caller.callAskUserQuestion(protoRequest)

            mcpLogger.info { "ğŸ“¥ [AskUserQuestion] æ”¶åˆ°å‰ç«¯å“åº”: ${protoResponse.answersCount} ä¸ªå›ç­”" }

            // è½¬æ¢ä¸º Map<é—®é¢˜, å›ç­”>
            val answersMap: Map<String, String> = protoResponse.answersList.associate {
                it.question to it.answer
            }

            // åºåˆ—åŒ–è¿”å›ç»™ Claude
            val content = Json.encodeToString(answersMap)

            mcpLogger.info { "âœ… [AskUserQuestion] å®Œæˆï¼Œè¿”å›: $content" }
            return content

        } catch (e: Exception) {
            mcpLogger.error { "âŒ [AskUserQuestion] å¤„ç†å¤±è´¥: ${e.message}" }
            e.printStackTrace()
            return ToolResult.error("å¤„ç†ç”¨æˆ·é—®é¢˜å¤±è´¥: ${e.message}")
        }
    }

    /**
     * å°† Any ç±»å‹é€’å½’è½¬æ¢ä¸º JsonElement
     * ç”¨äºå°† MCP æ¡†æ¶ä¼ å…¥çš„ Map<String, Any> è½¬æ¢ä¸ºå¯åºåˆ—åŒ–çš„ JsonElement
     */
    private fun anyToJsonElement(value: Any?): JsonElement {
        return when (value) {
            null -> JsonNull
            is JsonElement -> value
            is String -> JsonPrimitive(value)
            is Number -> JsonPrimitive(value)
            is Boolean -> JsonPrimitive(value)
            is Map<*, *> -> buildJsonObject {
                value.forEach { (k, v) ->
                    put(k.toString(), anyToJsonElement(v))
                }
            }
            is List<*> -> buildJsonArray {
                value.forEach { add(anyToJsonElement(it)) }
            }
            is Array<*> -> buildJsonArray {
                value.forEach { add(anyToJsonElement(it)) }
            }
            is Iterable<*> -> buildJsonArray {
                value.forEach { add(anyToJsonElement(it)) }
            }
            is Sequence<*> -> buildJsonArray {
                value.forEach { add(anyToJsonElement(it)) }
            }
            else -> {
                // å°è¯•å¤„ç†å…¶ä»–å¯è¿­ä»£ç±»å‹æˆ– JSON å­—ç¬¦ä¸²
                val str = value.toString()
                // å¦‚æœçœ‹èµ·æ¥åƒ JSON æ•°ç»„æˆ–å¯¹è±¡ï¼Œå°è¯•è§£æ
                if (str.startsWith("[") || str.startsWith("{")) {
                    try {
                        Json.parseToJsonElement(str)
                    } catch (e: Exception) {
                        mcpLogger.warn { "âš ï¸ æ— æ³•è§£æä¸º JSON: $str, ç±»å‹: ${value::class.qualifiedName}" }
                        JsonPrimitive(str)
                    }
                } else {
                    mcpLogger.debug { "ğŸ“¦ æœªçŸ¥ç±»å‹è½¬ä¸ºå­—ç¬¦ä¸²: ${value::class.qualifiedName}" }
                    JsonPrimitive(str)
                }
            }
        }
    }
}
