package com.asakii.server.rsocket

import com.asakii.rpc.api.AiAgentRpcService
import com.asakii.rpc.api.IdeTools
import com.asakii.rpc.api.RpcMessage as RpcMessageApi
import com.asakii.rpc.proto.*
import com.asakii.server.mcp.DefaultJetBrainsMcpServerProvider
import com.asakii.server.mcp.JetBrainsMcpServerProvider
import com.asakii.server.rpc.AiAgentRpcServiceImpl
import com.asakii.server.rpc.ClientCaller
import com.asakii.server.rsocket.ProtoConverter.toProto
import com.asakii.server.rsocket.ProtoConverter.toRpc
import com.google.protobuf.ByteString
import kotlinx.io.Buffer
import kotlinx.io.readByteArray
import kotlinx.io.write
import io.rsocket.kotlin.RSocket
import io.rsocket.kotlin.RSocketRequestHandler
import io.rsocket.kotlin.payload.Payload
import io.rsocket.kotlin.payload.buildPayload
import io.rsocket.kotlin.payload.data
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.Job
import kotlinx.coroutines.SupervisorJob
import kotlinx.coroutines.TimeoutCancellationException
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.launch
import kotlinx.coroutines.flow.catch
import kotlinx.coroutines.flow.map
import kotlinx.coroutines.withTimeout
import com.asakii.server.logging.StandaloneLogging
import com.asakii.server.logging.asyncInfo
import mu.KotlinLogging
import java.util.concurrent.atomic.AtomicInteger

/**
 * RSocket è·¯ç”±å¤„ç†å™¨
 *
 * ä½¿ç”¨ RSocket çš„ Request-Response å’Œ Request-Stream æ¨¡å¼å¤„ç† RPC è°ƒç”¨ã€‚
 * æ”¯æŒé€šè¿‡ requester å®ç°æœåŠ¡ç«¯è°ƒç”¨å®¢æˆ·ç«¯ï¼ˆåå‘è°ƒç”¨ï¼‰ã€‚
 *
 * é‡è¦ï¼šæ¯ä¸ª RSocket è¿æ¥å¿…é¡»åˆ›å»ºä¸€ä¸ªç‹¬ç«‹çš„ RSocketHandler å®ä¾‹ï¼
 * æ‰€æœ‰çŠ¶æ€ï¼ˆclientRequesterã€rpcServiceã€MCP Serverï¼‰éƒ½æ˜¯è¿æ¥çº§åˆ«çš„ï¼Œ
 * ç»å¯¹ä¸èƒ½åœ¨å¤šä¸ªè¿æ¥ä¹‹é—´å…±äº«ã€‚
 *
 * è·¯ç”±è¡¨ï¼ˆå®¢æˆ·ç«¯ -> æœåŠ¡ç«¯ï¼‰ï¼š
 * - agent.connect: Request-Response
 * - agent.query: Request-Stream
 * - agent.queryWithContent: Request-Stream
 * - agent.interrupt: Request-Response
 * - agent.disconnect: Request-Response
 * - agent.setModel: Request-Response
 * - agent.setPermissionMode: Request-Response
 * - agent.getHistory: Request-Response
 *
 * åå‘è°ƒç”¨è·¯ç”±ï¼ˆæœåŠ¡ç«¯ -> å®¢æˆ·ç«¯ï¼‰ï¼š
 * - client.call: Request-Response (é€šç”¨è°ƒç”¨)
 */
class RSocketHandler(
    private val ideTools: IdeTools,
    private val clientRequester: RSocket,  // å¿…é¡»åœ¨æ„é€ æ—¶ä¼ å…¥ï¼Œç¡®ä¿æ¯ä¸ªè¿æ¥ç‹¬ç«‹
    private val connectionId: String = java.util.UUID.randomUUID().toString(),  // è¿æ¥å”¯ä¸€æ ‡è¯†
    private val jetBrainsMcpServerProvider: JetBrainsMcpServerProvider = DefaultJetBrainsMcpServerProvider,  // JetBrains MCP Server Provider
    private val serviceConfigProvider: () -> com.asakii.server.config.AiAgentServiceConfig = { com.asakii.server.config.AiAgentServiceConfig() }  // æœåŠ¡é…ç½®æä¾›è€…ï¼ˆæ¯æ¬¡ connect æ—¶è·å–æœ€æ–°é…ç½®ï¼‰
) {
    // ä½¿ç”¨ ws.log ä¸“ç”¨ logger
    private val wsLog = KotlinLogging.logger(StandaloneLogging.WS_LOGGER)

    /**
     * åˆ›å»º RSocket è¯·æ±‚å¤„ç†å™¨
     *
     * æ¯ä¸ªè¿æ¥åˆ›å»ºç‹¬ç«‹çš„ handlerï¼ŒåŒ…å«ï¼š
     * - ç‹¬ç«‹çš„ RPC æœåŠ¡å®ä¾‹
     * - ç‹¬ç«‹çš„ MCP Server
     * - ç‹¬ç«‹çš„ ClientCallerï¼ˆç”¨äºåå‘è°ƒç”¨ï¼‰
     *
     * è¿æ¥å…³é—­æ—¶è‡ªåŠ¨æ¸…ç†æ‰€æœ‰èµ„æºã€‚
     */
    fun createHandler(): RSocket {
        wsLog.info("ğŸ”Œ [RSocket] [$connectionId] åˆ›å»ºè¯·æ±‚å¤„ç†å™¨")

        // åå‘è°ƒç”¨æ”¯æŒ
        val callIdCounter = AtomicInteger(0)

        // åˆ›å»º ClientCallerï¼ˆåˆå§‹æ—¶ requester å¯èƒ½ä¸ºç©ºï¼‰
        val clientCaller = createClientCaller(callIdCounter)

        // ä¸ºæ¯ä¸ªè¿æ¥åˆ›å»ºç‹¬ç«‹çš„ RPC æœåŠ¡ï¼ˆä¼ é€’ JetBrains MCP Server Provider å’ŒæœåŠ¡é…ç½®æä¾›è€…ï¼‰
        val rpcService: AiAgentRpcService = AiAgentRpcServiceImpl(
            ideTools = ideTools,
            clientCaller = clientCaller,
            jetBrainsMcpServerProvider = jetBrainsMcpServerProvider,
            serviceConfigProvider = serviceConfigProvider
        )

        val handler = RSocketRequestHandler {
            // ==================== Request-Response ====================

            requestResponse { request ->
                val route = extractRoute(request)
                val dataBytes = request.data.readByteArray()
                wsLog.info("ğŸ“¨ [RSocket] â† Request-Response: $route")
                wsLog.debug("ğŸ“¨ [RSocket] â† Request data (${dataBytes.size} bytes)")

                val response = when (route) {
                    "agent.connect" -> handleConnect(dataBytes, rpcService)
                    "agent.interrupt" -> handleInterrupt(rpcService)
                    "agent.runInBackground" -> handleRunInBackground(rpcService)
                    "agent.setMaxThinkingTokens" -> handleSetMaxThinkingTokens(dataBytes, rpcService)
                    "agent.disconnect" -> handleDisconnect(rpcService)
                    "agent.setModel" -> handleSetModel(dataBytes, rpcService)
                    "agent.setPermissionMode" -> handleSetPermissionMode(dataBytes, rpcService)
                    "agent.getHistory" -> handleGetHistory(rpcService)
                    "agent.truncateHistory" -> handleTruncateHistory(dataBytes, rpcService)
                    "agent.hasIdeEnvironment" -> handleHasIdeEnvironment()
                    "agent.getMcpStatus" -> handleGetMcpStatus(rpcService)
                    else -> throw IllegalArgumentException("Unknown route: $route")
                }

                val responseBytes = response.data.readByteArray()
                wsLog.info("ğŸ“¨ [RSocket] â†’ Response: $route (${responseBytes.size} bytes)")
                buildPayload { data(responseBytes) }
            }

            // ==================== Request-Stream ====================

            requestStream { request ->
                val route = extractRoute(request)
                val dataBytes = request.data.readByteArray()
                wsLog.info("ğŸ“¡ [RSocket] â† Request-Stream: $route")
                wsLog.debug("ğŸ“¡ [RSocket] â† Request data (${dataBytes.size} bytes)")

                when (route) {
                    "agent.query" -> handleQuery(dataBytes, rpcService)
                    "agent.queryWithContent" -> handleQueryWithContent(dataBytes, rpcService)
                    else -> throw IllegalArgumentException("Unknown route: $route")
                }
            }
        }

        // ç›‘å¬è¿æ¥å…³é—­ï¼Œè‡ªåŠ¨æ¸…ç† SDK èµ„æºï¼ˆéé˜»å¡ï¼‰
        handler.coroutineContext[Job]?.invokeOnCompletion { cause ->
            wsLog.info("ğŸ”Œ [RSocket] [$connectionId] è¿æ¥å…³é—­ï¼Œè‡ªåŠ¨æ¸…ç†èµ„æº (cause: ${cause?.message ?: "æ­£å¸¸å…³é—­"})")
            // ä½¿ç”¨ç‹¬ç«‹çš„åç¨‹ä½œç”¨åŸŸè¿›è¡Œå¼‚æ­¥æ¸…ç†ï¼Œé¿å…é˜»å¡å›è°ƒ
            CoroutineScope(SupervisorJob() + Dispatchers.IO).launch {
                try {
                    withTimeout(10000) { // 10ç§’è¶…æ—¶
                        rpcService.disconnect()
                    }
                    wsLog.info("âœ… [RSocket] [$connectionId] SDK èµ„æºå·²æ¸…ç†")
                } catch (e: Exception) {
                    wsLog.warn("âš ï¸ [RSocket] [$connectionId] æ¸…ç† SDK èµ„æºæ—¶å‡ºé”™: ${e.message}")
                }
            }
        }

        wsLog.info("âœ… [RSocket] [$connectionId] Handler åˆ›å»ºå®Œæˆï¼ŒclientRequester å·²ç»‘å®š")
        return handler
    }

    // ==================== Request-Response Handlers ====================

    private suspend fun handleConnect(dataBytes: ByteArray, rpcService: AiAgentRpcService): Payload {
        val options = if (dataBytes.isNotEmpty()) {
            val protoOptions = ConnectOptions.parseFrom(dataBytes)
            wsLog.debug("ğŸ“¥ [RSocket] connect options: provider=${protoOptions.provider}, model=${protoOptions.model}")
            protoOptions.toRpc()
        } else {
            wsLog.debug("ğŸ“¥ [RSocket] connect options: (default)")
            null
        }

        val result = rpcService.connect(options)
        wsLog.info("ğŸ“¤ [RSocket] connect result: sessionId=${result.sessionId}, provider=${result.provider}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleInterrupt(rpcService: AiAgentRpcService): Payload {
        wsLog.info("ğŸ“¥ [RSocket] interrupt request")
        val result = rpcService.interrupt()
        wsLog.info("ğŸ“¤ [RSocket] interrupt result: status=${result.status}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleRunInBackground(rpcService: AiAgentRpcService): Payload {
        wsLog.info("ğŸ“¥ [RSocket] runInBackground request")
        val result = rpcService.runInBackground()
        wsLog.info("ğŸ“¤ [RSocket] runInBackground result: status=${result.status}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleSetMaxThinkingTokens(dataBytes: ByteArray, rpcService: AiAgentRpcService): Payload {
        val req = com.asakii.rpc.proto.SetMaxThinkingTokensRequest.parseFrom(dataBytes)
        val maxThinkingTokens = if (req.hasMaxThinkingTokens()) req.maxThinkingTokens else null
        wsLog.info("ğŸ“¥ [RSocket] setMaxThinkingTokens request: maxThinkingTokens=$maxThinkingTokens")
        val result = rpcService.setMaxThinkingTokens(maxThinkingTokens)
        wsLog.info("ğŸ“¤ [RSocket] setMaxThinkingTokens result: maxThinkingTokens=${result.maxThinkingTokens}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleDisconnect(rpcService: AiAgentRpcService): Payload {
        wsLog.info("ğŸ“¥ [RSocket] disconnect request")
        val result = rpcService.disconnect()
        wsLog.info("ğŸ“¤ [RSocket] disconnect result: status=${result.status}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleSetModel(dataBytes: ByteArray, rpcService: AiAgentRpcService): Payload {
        val req = SetModelRequest.parseFrom(dataBytes)
        wsLog.info("ğŸ“¥ [RSocket] setModel request: model=${req.model}")
        val result = rpcService.setModel(req.model)
        wsLog.info("ğŸ“¤ [RSocket] setModel result: model=${result.model}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleSetPermissionMode(dataBytes: ByteArray, rpcService: AiAgentRpcService): Payload {
        val req = SetPermissionModeRequest.parseFrom(dataBytes)
        wsLog.info("ğŸ“¥ [RSocket] setPermissionMode request: mode=${req.mode}")
        val result = rpcService.setPermissionMode(req.mode.toRpc())
        wsLog.info("ğŸ“¤ [RSocket] setPermissionMode result: mode=${result.mode}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleGetHistory(rpcService: AiAgentRpcService): Payload {
        wsLog.info("?? [RSocket] getHistory request")
        val result = rpcService.getHistory()
        wsLog.info("?? [RSocket] getHistory result: messages=${result.messages.size}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private suspend fun handleTruncateHistory(dataBytes: ByteArray, rpcService: AiAgentRpcService): Payload {
        val req = TruncateHistoryRequest.parseFrom(dataBytes)
        wsLog.info("âœ‚ï¸ [RSocket] truncateHistory request: sessionId=${req.sessionId}, messageUuid=${req.messageUuid}")
        val result = rpcService.truncateHistory(req.sessionId, req.messageUuid, req.projectPath)
        wsLog.info("âœ‚ï¸ [RSocket] truncateHistory result: success=${result.success}, remainingLines=${result.remainingLines}")
        return buildPayload { data(result.toProto().toByteArray()) }
    }

    private fun handleHasIdeEnvironment(): Payload {
        val hasIde = ideTools.hasIdeEnvironment()
        wsLog.info("ğŸ–¥ï¸ [RSocket] hasIdeEnvironment: $hasIde")
        val response = HasIdeEnvironmentResponse.newBuilder()
            .setHasIde(hasIde)
            .build()
        return buildPayload { data(response.toByteArray()) }
    }

    private suspend fun handleGetMcpStatus(rpcService: AiAgentRpcService): Payload {
        wsLog.info("ğŸ”Œ [RSocket] getMcpStatus request")
        val result = rpcService.getMcpStatus()
        wsLog.info("ğŸ“¤ [RSocket] getMcpStatus result: ${result.servers.size} servers")
        val response = McpStatusResult.newBuilder().apply {
            result.servers.forEach { server ->
                addServers(McpServerStatus.newBuilder()
                    .setName(server.name)
                    .setStatus(server.status)
                    .apply {
                        server.serverInfo?.let { setServerInfo(it.toString()) }
                    }
                    .build())
            }
        }.build()
        return buildPayload { data(response.toByteArray()) }
    }

    // ==================== Request-Stream Handlers ====================

    private var streamMessageCounter = 0

    private fun handleQuery(dataBytes: ByteArray, rpcService: AiAgentRpcService): Flow<Payload> {
        val req = QueryRequest.parseFrom(dataBytes)
        wsLog.info("ğŸ“¥ [RSocket] query request: message=${req.message.take(100)}...")
        streamMessageCounter = 0

        return rpcService.query(req.message)
            .mapToPayloadWithLogging("query")
            .catch { e ->
                wsLog.error("âŒ [RSocket] query é”™è¯¯: ${e.message}")
                throw e
            }
    }

    private fun handleQueryWithContent(dataBytes: ByteArray, rpcService: AiAgentRpcService): Flow<Payload> {
        val req = QueryWithContentRequest.parseFrom(dataBytes)
        val contentBlocks = req.contentList.map { it.toRpc() }
        wsLog.info("ğŸ“¥ [RSocket] queryWithContent request: blocks=${contentBlocks.size}")
        streamMessageCounter = 0

        return rpcService.queryWithContent(contentBlocks)
            .mapToPayloadWithLogging("queryWithContent")
            .catch { e ->
                wsLog.error("âŒ [RSocket] queryWithContent é”™è¯¯: ${e.message}")
                throw e
            }
    }


    // ==================== Helper Methods ====================

    /**
     * ä» Payload metadata ä¸­æå–è·¯ç”±ä¿¡æ¯
     */
    private fun extractRoute(payload: Payload): String {
        val metadata = payload.metadata ?: throw IllegalArgumentException("Missing metadata")
        val metadataBytes = metadata.readByteArray()
        if (metadataBytes.isEmpty()) {
            throw IllegalArgumentException("Empty metadata")
        }

        // RSocket routing metadata: [length:1byte][route:N bytes]
        val length = metadataBytes[0].toInt() and 0xFF
        return String(metadataBytes, 1, length, Charsets.UTF_8)
    }

    /**
     * å°† RpcMessage Flow è½¬æ¢ä¸º Payload Flowï¼ˆä¸å¸¦æ—¥å¿—ï¼‰
     */
    private fun Flow<RpcMessageApi>.mapToPayload(): Flow<Payload> = map { message ->
        val protoMessage = message.toProto()
        buildPayload { data(protoMessage.toByteArray()) }
    }

    /**
     * å°† RpcMessage Flow è½¬æ¢ä¸º Payload Flowï¼ˆå¸¦æ—¥å¿—ï¼‰
     */
    private fun Flow<RpcMessageApi>.mapToPayloadWithLogging(route: String): Flow<Payload> = map { message ->
        streamMessageCounter++
        val msgType = message::class.simpleName ?: "Unknown"
        val counter = streamMessageCounter  // æ•è·å½“å‰è®¡æ•°å™¨å€¼

        // è®°å½•å®Œæ•´æ¶ˆæ¯å†…å®¹ï¼ˆæ ¼å¼åŒ–åœ¨æ—¥å¿—çº¿ç¨‹æ‰§è¡Œï¼‰
        wsLog.asyncInfo { "ğŸ“¤ [RSocket] #$counter ($route) $msgType: ${formatRpcMessage(message)}" }

        val protoMessage = message.toProto()
        buildPayload { data(protoMessage.toByteArray()) }
    }

    /**
     * æ ¼å¼åŒ– RpcMessage ä¸ºæ—¥å¿—å­—ç¬¦ä¸²ï¼ˆå®Œæ•´å†…å®¹ï¼Œä¸æˆªæ–­ï¼‰
     */
    private fun formatRpcMessage(message: RpcMessageApi): String = when (message) {
        is com.asakii.rpc.api.RpcStreamEvent -> {
            "event=${formatStreamEventData(message.event)}"
        }
        is com.asakii.rpc.api.RpcAssistantMessage -> {
            "content=${formatRpcContentBlocks(message.message.content)}, parentToolUseId=${message.parentToolUseId}"
        }
        is com.asakii.rpc.api.RpcUserMessage -> {
            "content=${formatRpcContentBlocks(message.message.content)}, parentToolUseId=${message.parentToolUseId}"
        }
        is com.asakii.rpc.api.RpcResultMessage -> {
            "subtype=${message.subtype}, isError=${message.isError}, numTurns=${message.numTurns}, result=${message.result}"
        }
        is com.asakii.rpc.api.RpcErrorMessage -> {
            "error=${message.message}"
        }
        else -> message.toString()
    }

    /**
     * æ ¼å¼åŒ–æµå¼äº‹ä»¶æ•°æ®
     */
    private fun formatStreamEventData(event: com.asakii.rpc.api.RpcStreamEventData): String = when (event) {
        is com.asakii.rpc.api.RpcContentBlockDeltaEvent -> {
            "delta=${formatDelta(event.delta)}, index=${event.index}"
        }
        is com.asakii.rpc.api.RpcContentBlockStartEvent -> {
            "block=${formatRpcContentBlock(event.contentBlock)}, index=${event.index}"
        }
        is com.asakii.rpc.api.RpcContentBlockStopEvent -> {
            "index=${event.index}"
        }
        is com.asakii.rpc.api.RpcMessageStartEvent -> {
            "message=${event.message}"
        }
        is com.asakii.rpc.api.RpcMessageDeltaEvent -> {
            "delta=${event.delta}, usage=${event.usage}"
        }
        is com.asakii.rpc.api.RpcMessageStopEvent -> {
            "(stop)"
        }
    }

    /**
     * æ ¼å¼åŒ– Delta
     */
    private fun formatDelta(delta: com.asakii.rpc.api.RpcDelta): String = when (delta) {
        is com.asakii.rpc.api.RpcTextDelta -> "text=\"${delta.text}\""
        is com.asakii.rpc.api.RpcThinkingDelta -> "thinking=\"${delta.thinking}\""
        is com.asakii.rpc.api.RpcInputJsonDelta -> "json=\"${delta.partialJson}\""
    }

    /**
     * æ ¼å¼åŒ–å†…å®¹å—åˆ—è¡¨
     */
    private fun formatRpcContentBlocks(blocks: List<com.asakii.rpc.api.RpcContentBlock>?): String {
        return blocks?.joinToString("; ") { formatRpcContentBlock(it) } ?: "(empty)"
    }

    /**
     * æ ¼å¼åŒ–å•ä¸ªå†…å®¹å—
     */
    private fun formatRpcContentBlock(block: com.asakii.rpc.api.RpcContentBlock): String = when (block) {
        is com.asakii.rpc.api.RpcTextBlock -> "Text(\"${block.text}\")"
        is com.asakii.rpc.api.RpcThinkingBlock -> "Thinking(\"${block.thinking}\")"
        is com.asakii.rpc.api.RpcImageBlock -> "Image(mediaType=${block.source.mediaType}, dataLen=${block.source.data?.length})"
        is com.asakii.rpc.api.RpcToolUseBlock -> "ToolUse(id=${block.id}, name=${block.toolName}, input=${block.input})"
        is com.asakii.rpc.api.RpcToolResultBlock -> "ToolResult(toolUseId=${block.toolUseId}, content=${block.content}, isError=${block.isError})"
        is com.asakii.rpc.api.RpcCommandExecutionBlock -> "Command(cmd=${block.command}, output=${block.output})"
        is com.asakii.rpc.api.RpcFileChangeBlock -> "FileChange(changes=${block.changes})"
        is com.asakii.rpc.api.RpcMcpToolCallBlock -> "McpTool(server=${block.server}, tool=${block.tool})"
        is com.asakii.rpc.api.RpcWebSearchBlock -> "WebSearch(query=${block.query})"
        is com.asakii.rpc.api.RpcTodoListBlock -> "TodoList(items=${block.items})"
        is com.asakii.rpc.api.RpcErrorBlock -> "Error(${block.message})"
        is com.asakii.rpc.api.RpcUnknownBlock -> "Unknown(type=${block.type})"
    }

    /**
     * åˆ›å»ºè·¯ç”±å…ƒæ•°æ®
     */
    private fun createRouteMetadata(route: String): ByteArray {
        val routeBytes = route.toByteArray(Charsets.UTF_8)
        val metadata = ByteArray(1 + routeBytes.size)
        metadata[0] = routeBytes.size.toByte()
        System.arraycopy(routeBytes, 0, metadata, 1, routeBytes.size)
        return metadata
    }

    /**
     * åˆ›å»º ClientCallerï¼ˆç”¨äºæœåŠ¡å™¨å‘å®¢æˆ·ç«¯å‘èµ·è¯·æ±‚ï¼‰
     *
     * ä½¿ç”¨ Protobuf åºåˆ—åŒ–ï¼Œé€šè¿‡ client.call è·¯ç”±å‘é€ç±»å‹åŒ–è¯·æ±‚ã€‚
     *
     * æ³¨æ„ï¼šclientRequester åœ¨æ„é€ æ—¶å·²ç»ä¼ å…¥ï¼Œä¿è¯æ¯ä¸ªè¿æ¥ä½¿ç”¨ç‹¬ç«‹çš„ requesterã€‚
     */
    private fun createClientCaller(
        callIdCounter: AtomicInteger
    ): ClientCaller {
        // ç›´æ¥ä½¿ç”¨æ„é€ æ—¶ä¼ å…¥çš„ clientRequesterï¼Œä¸å†éœ€è¦æ£€æŸ¥ null
        val requester = clientRequester

        return object : ClientCaller {
            override suspend fun callAskUserQuestion(request: AskUserQuestionRequest): AskUserQuestionResponse {
                val callId = "srv-${callIdCounter.incrementAndGet()}"
                wsLog.info("ğŸ“¤ [RSocket] [$connectionId] â†’ AskUserQuestion(Proto): callId=$callId, questions=${request.questionsCount}")

                try {
                    // æ„å»º ServerCallRequest
                    val serverRequest = ServerCallRequest.newBuilder()
                        .setCallId(callId)
                        .setMethod("AskUserQuestion")
                        .setAskUserQuestion(request)
                        .build()

                    val routeMetadata = createRouteMetadata("client.call")
                    val metadataBuffer = Buffer().apply { write(routeMetadata) }
                    val dataBuffer = Buffer().apply { write(serverRequest.toByteArray()) }
                    val payload = buildPayload {
                        data(dataBuffer)
                        metadata(metadataBuffer)
                    }

                    val responsePayload = withTimeout(120_000) { // ç”¨æˆ·äº¤äº’å¯èƒ½éœ€è¦æ›´é•¿æ—¶é—´
                        requester.requestResponse(payload)
                    }

                    // è§£æ ServerCallResponse
                    val responseBytes = responsePayload.data.readByteArray()
                    val serverResponse = ServerCallResponse.parseFrom(responseBytes)

                    if (!serverResponse.success) {
                        val errorMsg = serverResponse.error.ifEmpty { "Unknown error" }
                        wsLog.warn("ğŸ“¥ [RSocket] â† AskUserQuestion å¤±è´¥: callId=$callId, error=$errorMsg")
                        throw RuntimeException("AskUserQuestion failed: $errorMsg")
                    }

                    if (!serverResponse.hasAskUserQuestion()) {
                        throw RuntimeException("AskUserQuestion response missing askUserQuestion field")
                    }

                    wsLog.info("ğŸ“¥ [RSocket] [$connectionId] â† AskUserQuestion æˆåŠŸ: callId=$callId, answers=${serverResponse.askUserQuestion.answersCount}")
                    return serverResponse.askUserQuestion

                } catch (e: TimeoutCancellationException) {
                    wsLog.warn("ğŸ“¥ [RSocket] [$connectionId] â† AskUserQuestion è¶…æ—¶: callId=$callId")
                    throw RuntimeException("AskUserQuestion timeout")
                } catch (e: Exception) {
                    wsLog.warn("ğŸ“¥ [RSocket] [$connectionId] â† AskUserQuestion å¤±è´¥: callId=$callId, error=${e.message}")
                    throw RuntimeException("AskUserQuestion failed: ${e.message}")
                }
            }

            override suspend fun callRequestPermission(request: RequestPermissionRequest): RequestPermissionResponse {
                val callId = "srv-${callIdCounter.incrementAndGet()}"
                wsLog.info("ğŸ“¤ [RSocket] [$connectionId] â†’ RequestPermission(Proto): callId=$callId, toolName=${request.toolName}")

                try {
                    // æ„å»º ServerCallRequest
                    val serverRequest = ServerCallRequest.newBuilder()
                        .setCallId(callId)
                        .setMethod("RequestPermission")
                        .setRequestPermission(request)
                        .build()

                    val routeMetadata = createRouteMetadata("client.call")
                    val metadataBuffer = Buffer().apply { write(routeMetadata) }
                    val dataBuffer = Buffer().apply { write(serverRequest.toByteArray()) }
                    val payload = buildPayload {
                        data(dataBuffer)
                        metadata(metadataBuffer)
                    }

                    val responsePayload = withTimeout(120_000) { // ç”¨æˆ·äº¤äº’å¯èƒ½éœ€è¦æ›´é•¿æ—¶é—´
                        requester.requestResponse(payload)
                    }

                    // è§£æ ServerCallResponse
                    val responseBytes = responsePayload.data.readByteArray()
                    val serverResponse = ServerCallResponse.parseFrom(responseBytes)

                    if (!serverResponse.success) {
                        val errorMsg = serverResponse.error.ifEmpty { "Unknown error" }
                        wsLog.warn("ğŸ“¥ [RSocket] â† RequestPermission å¤±è´¥: callId=$callId, error=$errorMsg")
                        throw RuntimeException("RequestPermission failed: $errorMsg")
                    }

                    if (!serverResponse.hasRequestPermission()) {
                        throw RuntimeException("RequestPermission response missing requestPermission field")
                    }

                    wsLog.info("ğŸ“¥ [RSocket] [$connectionId] â† RequestPermission æˆåŠŸ: callId=$callId, approved=${serverResponse.requestPermission.approved}")
                    return serverResponse.requestPermission

                } catch (e: TimeoutCancellationException) {
                    wsLog.warn("ğŸ“¥ [RSocket] [$connectionId] â† RequestPermission è¶…æ—¶: callId=$callId")
                    throw RuntimeException("RequestPermission timeout")
                } catch (e: Exception) {
                    wsLog.warn("ğŸ“¥ [RSocket] [$connectionId] â† RequestPermission å¤±è´¥: callId=$callId, error=${e.message}")
                    throw RuntimeException("RequestPermission failed: ${e.message}")
                }
            }
        }
    }
}
